Integrate MarketplaceProducer
Now testing looks like this:

```
MARKETPLACE_MAPPER_STUB_EMPTY=false MARKETPLACE_MAX_ATTEMPTS=1 DEV_MODE=true MARKETPLACE_URL=http://localhost:8087/does-not-exist ./gradlew bootRun
```

Observe:

```
2021-03-17 20:40:58,685 [thread=marketplace-worker-0-C-1] [INFO ] [org.candlepin.subscriptions.marketplace.MarketplaceWorker] - mapTallySummary called w/ summary: org.candlepin.subscriptions.json.TallySummary@786d6ad9[accountNumber=account123,tallySnapshots=[org.candlepin.subscriptions.json.TallySnapshot@3f06f070[id=a260e99d-b617-4dd9-9194-64717629b001,snapshotDate=2021-03-10T00:00Z,productId=OpenShift-metrics,sla=Premium,usage=<null>,granularity=Daily,tallyMeasurements=[org.candlepin.subscriptions.json.TallyMeasurement@640060bb[hardwareMeasurementType=PHYSICAL,uom=Cores,value=48.0], org.candlepin.subscriptions.json.TallyMeasurement@42f5afe2[hardwareMeasurementType=TOTAL,uom=Cores,value=48.0]]]]]
2021-03-17 20:40:58,686 [thread=marketplace-worker-0-C-1] [ERROR] [org.springframework.kafka.listener.SeekToCurrentErrorHandler] - Backoff FixedBackOff{interval=0, currentAttempts=10, maxAttempts=9} exhausted for ConsumerRecord(topic = platform.rhsm-subscriptions.tally, partition = 0, leaderEpoch = 0, offset = 246264, CreateTime = 1616013657687, serialized key size = -1, serialized value size = 361, headers = RecordHeaders(headers = [], isReadOnly = false), key = null, value = org.candlepin.subscriptions.json.TallySummary@786d6ad9[accountNumber=account123,tallySnapshots=[org.candlepin.subscriptions.json.TallySnapshot@3f06f070[id=a260e99d-b617-4dd9-9194-64717629b001,snapshotDate=2021-03-10T00:00Z,productId=OpenShift-metrics,sla=Premium,usage=<null>,granularity=Daily,tallyMeasurements=[org.candlepin.subscriptions.json.TallyMeasurement@640060bb[hardwareMeasurementType=PHYSICAL,uom=Cores,value=48.0], org.candlepin.subscriptions.json.TallyMeasurement@42f5afe2[hardwareMeasurementType=TOTAL,uom=Cores,value=48.0]]]]])
org.springframework.kafka.listener.Li